Fix alignment on facts

--- a/styles.css
+++ b/styles.css
@@ -506,7 +506,8 @@ body {
   margin-left:auto;
   font-family: "Inconsolata", sans-serif;
   font-size: 20px;
-  padding-top: 0em;
+  padding-top: 2em;
+  padding-bottom:2em;
   
 }
 
@@ -517,9 +518,8 @@ body {
 }
 
 .quote-box {
-  padding-top:3em;
-  padding-bottom:6em;
-  
+  padding:2em;
+  background-color:white;
 }
 
 .paragraph-bakery {
